Included a scroll bar to avoid the task added to overlap with the container card  and also added a character limit for the task to prevent buttons from overlapping aswell

--- a/Public/css/Styles.css
+++ b/Public/css/Styles.css
@@ -100,7 +100,13 @@ body {
     text-decoration: line-through;
     background-color: #464646;
   }
+  .containerlist {
+    max-height: 300px;
+    overflow-y: auto;
+    margin-top: 10px;
+    padding-right: 5px; 
   
+  }
   .delete-btn {
     
     color: rgb(250, 19, 19);
